<resources>
    <string name="app_name">Speaker Balancer</string>
    <string name="new_config">New Configuration</string>
    <string name="load_config">Load Configuration</string>
    <string name="name">Name</string>
    <string name="systemType">System Type</string>
    <string name="roomLength">Room Length</string>
    <string name="roomWidth">Room Width</string>
    <string name="confirm">Confirm</string>
    <string name="noInput">" not specified"</string>
    <string name="badInput">Invalid Input:</string>
    <string name="dataSaved">Data saved</string>
    <string name="cancel">Cancel</string>
    <string name="delConfig">Delete Configuration</string>
    <string name="delConfigMsg">Are you sure you want to delete this configuration? This cannot be done.</string>
    <string name="delYes">Configuration successfully deleted</string>
    <string name="delNo">Deletion canceled</string>
    <string name="wallMaterial">Wall Material</string>
    <string name="zeroFirstDigit">\'s first digit cannot be 0</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="editBasicInfo">Edit Basic Info</string>
    <string name="roomLengthFt">Room Length (ft)</string>
    <string name="roomWidthFt">Room Width (ft)</string>
    <string name="nameMultiple">" is already used by a different configuration"</string>
    <string name="changedSystem">System Type Changed</string>
    <string name="changedSystemBody">Changing the system type will reset configured speaker positions. Are you sure you would like to continue?</string>
    <string name="editLayout">Edit Speaker Layout</string>
    <string name="saveLayout">Save Layout</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="subwoofer">Subwoofer?</string>
    <string name="noConfig">No configurations have been created.</string>
    <string name="speakerName">Speaker Name</string>
    <string name="speakerId">Speaker ID</string>
    <string name="editSpeakerInfo">Edit Info</string>
    <string name="moveSpeaker">Move</string>
    <string name="tweeter">Tweeter</string>
    <string name="noSpeakerSelected">No speaker selected</string>
    <string name="_0_0">0.0</string>
    <string name="movingSpeaker">Moving %1$s %2$s</string>
    <string name="editingSpeaker">Editing %1$s %2$s</string>
    <string name="nameDisplay">Name: %1$s</string>
    <string name="systemTypeDisplay">System Type: %1$s</string>
    <string name="roomLengthDisplay">Room Length (ft): %1$d</string>
    <string name="roomWidthDisplay">Room Width (ft): %1$d</string>
    <string name="wallMaterialDisplay">Wall Material: %1$s</string>
    <string name="resetPosition">Reset Position</string>
    <string name="resetAllSpeakerPositions">Reset All Speaker Positions</string>
    <string name="resetAllSpeakerPositionsDesc">This will reset all speakers to their default positions. Are you sure you would like to continue?</string>
    <string name="positionsReset">Positions reset</string>
    <string name="minRange">Min. Range</string>
    <string name="maxRange">Max. Range</string>
    <string name="minRangeHz">Min. Range (hz)</string>
    <string name="maxRangeHz">Max. Range (hz)</string>
</resources>