<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:background="#fff"
    android:elevation="2sp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:id="@+id/name_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:id="@+id/systemType_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/systemType" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:id="@+id/roomLength_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roomLengthFt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">

        <TextView
            android:id="@+id/roomWidth_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roomWidthFt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp">

        <TextView
            android:id="@+id/wallMaterial_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wallMaterial" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="1"
            android:text="@string/edit"
            android:textColor="#fff"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>