<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:background="#fff"
    android:elevation="2sp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/speakerImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/tweeter"
        app:srcCompat="@drawable/tweeter" />

    <LinearLayout
        android:id="@+id/speakerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/speakerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speakerName" />

        <TextView
            android:id="@+id/speakerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speakerId" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/moveSpeaker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moveSpeaker" />

        <Button
            android:id="@+id/editSpeakerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editSpeakerInfo" />

    </LinearLayout>

</LinearLayout>