<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.EditSpeakerLayout">

    <include
        android:id="@+id/speakerLayoutRef"
        layout="@layout/speaker_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/seekBarList"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lineX"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textX"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/x" />

            <SeekBar
                android:id="@+id/seekBarX"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineY"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textY"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/y" />

            <SeekBar
                android:id="@+id/seekBarY"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="16" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveLayout" />

</LinearLayout>